2006-07-31  Sven Panne  <sven.panne@aedion.de>

	* src/al_siteconfig.h: Cleaned up #ifdefs for sized integer types.

2006-07-31  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: disable warnings by default, add -W flags only for GCC
	compatible compilers, don't check twice for unistd.h
	
	* admin/CMakeModules/FindSleepFunction.cmake: sync to OpenAL SI version

2006-07-26  Pannes  <sven.panne@aedion.de>

	* configure.ac: Due to some troubles with -ansi on MinGW and Cygwin,
	don't enable warnings by default.

2006-06-07  Sven Panne  <sven.panne@aedion.de>

	* admin/RPM/freealut.spec.in: Small spec updates for SuSE 10.1.

	* Released Version 1.1.0, subversion tag is "freealut_1_1_0".

2006-05-22  Sven Panne  <sven.panne@aedion.de>

	* Prepared release candidate 1 for 1.1.0, tag is "freealut_1_1_0_RC1".

	* NEWS: Added news for 1.1.0.

2006-05-11  Sven Panne  <sven.panne@aedion.de>

	* README, admin/VisualStudio6/alut/alut.dsp,
	admin/VisualStudio6/hello_world/hello_world.dsp,
	admin/VisualStudio6/playfile/playfile.dsp,
	admin/VisualStudioDotNET/alut/alut.vcproj,
	admin/VisualStudioDotNET/hello_world/hello_world.vcproj,
	admin/VisualStudioDotNET/playfile/playfile.vcproj: Changed the paths to
	the headers and the library to conform to the default of the current
	OpenAL SDK installer from Creative.

	* src/alutWaveform.c(getWaveformFunction): To avoid warnings on VC6, add
	some redundant '&' operators.

	* include/AL/alut.h: Added some fragile logic to find the right path to
	the OpenAL headers.

2006-04-12  Sven Panne  <sven.panne@aedion.de>	

	* configure.ac: To guarantee version consistency, generate .spec
	file via configure.

	* admin/RPM/.cvsignore, admin/RPM/freealut.spec.in: Added.

	* admin/RPM/freealut.spec: Removed.

	* CMakeLists.txt, admin/VisualStudio6/alut/alut.dsp,
	admin/VisualStudioDotNET/alut/alut.vcproj, admin/autotools/.indent.pro,
	configure.ac, include/AL/alut.h, src/Makefile.am, src/alutBufferData.c,