@@ -5,7 +5,8 @@
 2006-07-31  Prakash Punnoor <prakash@punnoor.de>
 
 	* CMakeLists.txt: disable warnings by default, add -W flags only for GCC
-	compatible compilers, don't check twice for unistd.h
+	compatible compilers, don't check twice for unistd.h, add checks for
+	__int8
 	
 	* admin/CMakeModules/FindSleepFunction.cmake: sync to OpenAL SI version
 
